# signal-processing

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
activator/: conftest.py  main.py  pyproject.toml
activator/activator/: activator.py
activator/activator/instances/: activator.py
activator/src/activator/: activator.py  audio_demo.py  base.py  base_demo.py  file_input.py  files.py  live_input.py  offline.py
activator/src/activator/instances/: activator.py  base_demo.py
activator/tests/: config.yaml  test_activator.py  test_activator_file_input.py  test_activator_files.py  test_activator_live_input.py  test_activator_offline.py  test_audio_demo.py  test_base_demo.py
activator/tests/config/: activator.yaml  audio_demo.yaml  base_demo.yaml  file_input.yaml  files.yaml  live_input.yaml  offline.yaml
activator/tests_activator/: config.yaml  conftest.py  test_activator.py
analysis/: conftest.py  pyproject.toml
analysis/analysis/: analysis.py
analysis/analysis/instances/: analysis.py
analysis/src/analysis/: analysis.py
analysis/src/analysis/instances/: analysis.py
analysis/tests/: activator_config0.yaml  activator_config1.yaml  config.yaml  test_analysis.py
analysis/tests/config/: activator_config0.yaml  activator_config1.yaml  analysis.yaml
analysis/tests_analysis/: activator_config0.yaml  config.yaml  conftest.py  test_analysis.py
audio-handle/: conftest.py  pyproject.toml
audio-handle/audio_handle/: utils.py
audio-handle/src/audio_handle/: utils.py
audio-handle/tests/: test_audio_handle.py
audio-io/: pyproject.toml
audio-io/src/audio_io/: conversions.py  devices.py  files.py
audio-io/tests/: test_audio_conversions.py  test_audio_devices.py  test_audio_files.py
audio-io/tests/config/: audio_handle.yaml
audio_handle/: pyproject.toml
audio_handle/audio_handle/: audio_handle.py
audio_handle/tests/: config.yaml  test_audio_handle.py
buffer/: conftest.py  main.py  pyproject.toml
buffer/buffer/: buffer.py
buffer/config/: input_buffer.yaml
buffer/src/buffer/: buffer.py
buffer/tests/: test_buffer.py
buffer/tests/config/: input_buffer.yaml  output_buffer.yaml
buffer/tests_buffer/: conftest.py  test_buffer.py
coordinates/: pyproject.toml
coordinates/src/coordinates/: __init__.py  coordinates.py
coordinates/tests/: test_coordinates.py
data-handle/: conftest.py  pyproject.toml
data-handle/data_handle/: utils.py
data-handle/tests/: test_frequency.py
data-types/: conftest.py  pyproject.toml
data-types/src/data_types/: conversions.py  frequency.py
data-types/tests/: test_conversions.py  test_frequency.py
data-types/tests/config/: normal_data.yaml  normal_data_file.yaml
data_handle/: conftest.py  pyproject.toml
data_handle/config/: normal_data_file.yaml
data_handle/data_handle/: data_handle.py  utils.py
data_handle/tests/: test_data_handle.py  test_utils.py
data_handle/tests/config/: make_yaml_safe.yaml  normal_data_file.yaml
data_handle/tests_data_handle/: conftest.py
parametrize-tests/: README.md  conftest.py  pyproject.toml
parametrize-tests/src/parametrize_tests/: __init__.py  fixtures.py  yaml_sweep_parser.py
parametrize-tests/tests/: test_fixtures.py  test_yaml_sweep_parser.py
parametrize-tests/tests/config/: fixture1.yaml  test_override.yaml  yaml_sweep_parser.yaml  yaml_sweep_parser_expected.yaml
parse-sweeps/: pyproject.toml
parse_sweeps/: conftest.py  pyproject.toml
parse_sweeps/parse_sweeps/: parse_sweeps.py
parse_sweeps/tests/: activator_config.yaml  config.yaml  siso_config.yaml
parse_sweeps/tests_parse_sweeps/: conftest.py  siso_config.yaml  test_parse_sweeps.py
spatial-audio/: .gitignore  conftest.py  gui_demo.py  main.py  pyproject.toml
spatial-audio-demo/: activator.yaml  demo.py  pyproject.toml  run_demo.sh
spatial-audio-demo/scripts/: create_dummy_input.py  download_data.sh  test_pyaudio_8khz_int16.py  test_pyaudio_exact_params.py
spatial-audio/src/spatial_audio/: __init__.py  spatial_audio.py  system.py
spatial-audio/tests/: test_spatial_audio.py  test_spatial_audio_binaural.py  test_spatial_audio_mono.py  test_spatial_audio_stereo.py  test_spatial_audio_system.py
spatial-audio/tests/config/: binaural.yaml  mono.yaml  spatial_audio.yaml  stereo.yaml  system.yaml
spatial_audio/: conftest.py  pyproject.toml
spatial_audio/spatial_audio/: spatial_audio.py
spatial_audio/tests/: config.yaml  test_spatial_audio.py
spatial_audio/tests/config/: module.yaml  spatial_audio.yaml  system.yaml
stft/: conftest.py  pyproject.toml
stft/src/stft/: analysis.py  stft.py  synthesis.py  system.py
stft/src/stft/instances/: system.py
stft/stft/: analysis.py  stft.py  synthesis.py
stft/stft/instances/: activator.py  system.py
stft/tests/: config.yaml  test_stft.py
stft/tests/config/: stft_system.yaml
system/: conftest.py  pyproject.toml
system/src/system/: system.py
system/src/system/instances/: system.py
system/system/: system.py
system/tests/: config.yaml  test_system.py
system/tests/config/: system.yaml
system/tests_system/: config.yaml  test_system.py
try_pyaudio/: list_devices.py  pyproject.toml  stream.py  try_pyaudio.py
wraplogging/: pyproject.toml
wraplogging/src/wraplogging/: wraplogging.py
wraplogging/tests/: test_wraplogging.py
