[project]
name = "signal-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "analysis",
    "audio-handle",
    "data-handle",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.uv.sources]
analysis = { path = "analysis", editable = true }
data-handle = { path = "data_handle", editable = true }
audio-handle = { path = "audio_handle", editable = true }
