[project]
name = "signal-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "analysis",
    "audio-handle",
    "data-types",
    "spatial-audio",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
analysis = { path = "analysis", editable = true }
data-types = { path = "data-types", editable = true }
audio-handle = { path = "audio-handle", editable = true }
spatial-audio = { path = "spatial-audio", editable = true }
