[project]
name = "signal-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "analysis",
    "audio-io",
    "coordinates",
    "spatial-audio",
]

[dependency-groups]
dev = [
    "lizard>=1.21.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
analysis = { path = "analysis", editable = true }
audio-io = { path = "audio-io", editable = true }
spatial-audio = { path = "spatial-audio", editable = true }
coordinates = { path = "coordinates", editable = true }
