[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "activator",
    "parse-sweeps",
]

[dependency-groups]
dev = [
    "data-handle",
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
activator = { path = "../activator", editable = true }
data-handle = { path = "../data_handle", editable = true }

[tool.setuptools.packages.find]
exclude = ["output", "outputs"]
