[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "activator",
    "parse-sweeps",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "data-handle",
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse-sweeps", editable = true }
activator = { path = "../activator", editable = true }
data-handle = { path = "../data-handle", editable = true }

[tool.setuptools.packages.find]
exclude = ["output*"]
