[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "activator",
    "parametrize-tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "data-types",
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
parametrize-tests = { path = "../parametrize-tests", editable = true }
activator = { path = "../activator", editable = true }
data-types = { path = "../data-types", editable = true }

[tool.setuptools.packages.find]
exclude = ["output*"]
