[project]
name = "audio-handle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-handle",
    "numpy>=2.2.3",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "parse-sweeps",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
data-handle = { path = "../data_handle", editable = true }
