[project]
name = "audio-handle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-types",
    "numpy>=2.2.3",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "parametrize-tests",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
parametrize-tests = { path = "../parametrize-tests", editable = true }
data-types = { path = "../data-types", editable = true }
