[project]
name = "buffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "parametrize-tests",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
parametrize-tests = { path = "../parametrize-tests", editable = true }
