[project]
name = "data-handle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noam Shabtai", email = "shabtai.noam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "parse-sweeps",
    "pytest>=9.0.1",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse-sweeps", editable = true }
