[project]
name = "data-handle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
]

[dependency-groups]
dev = [
    "parse-sweeps",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
