[project]
name = "spatial-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-handle",
    "data-handle",
    "numpy-quaternion>=2024.0.8",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "parse-sweeps",
    "pytest>=8.3.5",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
data-handle = { path = "../data_handle", editable = true }
audio-handle = { path = "../audio_handle", editable = true }

[tool.setuptools.packages.find]
exclude = ["hrtf"]
