[project]
name = "spatial-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-handle",
    "numpy>=2.3.4",
    "numpy-quaternion>=2024.0.12",
    "stft",
    "system",
]

[dependency-groups]
dev = [
    "parse-sweeps",
    "pytest>=8.4.2",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
system = { path = "../system", editable = true }
audio-handle = { path = "../audio_handle", editable = true }
stft = { path = "../stft", editable = true }

[tool.setuptools.packages.find]
exclude = ["hrtf*"]
