[project]
name = "stft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "system",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "activator",
    "ipdb>=0.13.13",
    "parametrize-tests",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]

[tool.uv.sources]
parametrize-tests = { path = "../parametrize-tests", editable = true }
activator = { path = "../activator", editable = true }
system = { path = "../system", editable = true }

[tool.setuptools.packages.find]
exclude = ["output*"]
