[project]
name = "system"
version = "0.1.0"
description = ""
authors = [
    {name = "Noam Shabtai",email = "shabtai.noam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buffer @ file:///home/noam/version_control/portfolio/signal_processing/buffer"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.add.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
parse-sweeps = {path = "../parse_sweeps", develop = true}


[tool.poetry.dependencies]
buffer = {develop = true}
