[project]
name = "system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buffer",
]

[dependency-groups]
dev = [
    "parse-sweeps",
    "pytest>=8.3.4",
]

[tool.uv.sources]
parse-sweeps = { path = "../parse_sweeps", editable = true }
buffer = { path = "../buffer", editable = true }
